# tract

./: .gitignore  ARCHITECTURE_RESEARCH.md  CLAUDE.md  CONSUMERS.md  README.md  mkdocs.yml  pyproject.toml
.planning/: MILESTONES.md  PERSONAL_WEAKNESSES.md  PHASE_SKELETON.md  PREPLAN.md  PRINCIPLES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VISION.md
.planning/extensions/: DECOMPOSITION_SPEC.md  EXTENSIONS.md
.planning/loops/: AUDIT_LOOP_SUMMARY.md  SEED_PROMPT.md  WAVE_14_SUMMARY.md  WAVE_18_SUMMARY.md
.planning/milestones/: v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/reconceptualization/: APPLICATIONS.md  OPEN_QUESTIONS.md  OVERVIEW.md  PAPER_ANALYSIS_GCC.md  RULES.md  SUBSTRATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/temp/: AUTONOMOUS_OPS_PLAN.md  CROSS_TRACT_MERGE_UNIMPLEMENTED.md  DYNAMIC_OPERATIONS_PLAN.md  HOOK_DEFERRED_FEATURES.md  HOOK_SYSTEM_DESIGN.md  LOOP_ROUNDS_SUMMARY.md  TOOL_RESULT_API.md  TOOL_RESULT_IMPL_PLAN.md
.tutor/: GUIDE.md  config.yaml
cookbook/: SCENARIOS.md  _logging.py  _providers.py  conftest.py
cookbook/00_basics/: 01_commit_and_compile.py  03_status_and_budget.py  04_log_and_diff.py
cookbook/01_conversation/: 01_manual_commit_compile.py  02_shorthand_and_format.py  03_chat_and_persist.py
cookbook/01_foundations/: 01_foundations.db  atomic_batch.py  first_conversation.py  token_budget_guardrail.py
cookbook/02_token_awareness/: 01_status_and_budget.py  02_budget_guardrail_loop.py
cookbook/03_llm_setup/: 01_per_call_config.py  02_defaults_and_operations.py  03_per_operation_clients.py  04_resolution_chain.py
cookbook/04_curation/: 01_edit_in_place.py  02_pin_skip_annotate.py  03_batch_rollback.py  04_important_and_retention.py
cookbook/05_tracing/: 01_log_and_diff.py  02_time_travel.py  03_config_provenance.py  04_tool_provenance.py  05_edit_history.py
cookbook/06_branching/: 01_branch_switch_delete.py  02_merge_strategies.py  03_cherry_pick_rebase.py
cookbook/07_compression/: 01_manual_compression.py  02_llm_compression.py  03_gc_and_reorder.py
cookbook/12_integrations/: 01_agno_sidecar.py
cookbook/agent/: 01_context_management.py  01_implicit_discovery.py  02_branching.py  02_multi_agent.py  03_self_correction.py  04_knowledge_organization.py  04_profile_stages.py  05_discovery_profile.py  05_staged_workflow.py  06_presentation_layer.py  06_tangent_isolation.py  07_quality_gates.py  07_tool_compaction.py  08_multi_agent.py  08_semantic_gates.py  09_self_regulating.py  09_semantic_maintenance.py  10_collaborative_research.py  11_profile_staged_agent.py  12_supervisor_worker.py  13_discovery_profile.py  14_presentation_layer.py  15_tool_compaction.py  task_api.py  test_task_api.py
cookbook/agentic/: 01_implicit_discovery.py  02_multi_agent.py  03_topologies.py  04_agent_infrastructure.py  04_semantic_automation.py  05_adversarial_review.py  05_tool_compaction.py  06_semantic_automation.py  07_adversarial_review.py  07_context_pressure.py  08_checkpoint_resume.py  08_coding_with_tests.py  09_dynamic_profiles.py  09_self_routing.py  10_error_recovery.py  12_dead_approaches.py  13_eval_optimize.py  14_agents_as_tools.py
cookbook/basics/: 04_log_and_diff.py  06_chat_and_persist.py
cookbook/compositions/: autonomous_steering.py  long_running_session.py  self_correcting_agent.py
cookbook/config/: 01_per_call_config.py  02_operation_config.py  03_operation_clients.py  04_resolution_chain.py
cookbook/developer/: 00_internals.py
docs/: changelog.md  index.md
labs/: SCENARIOS.md
tests/: conftest.py  strategies.py  test_ancestry.py  test_anthropic_client.py  test_async.py  test_async_advanced.py  test_async_methods.py  test_auto_message.py  test_autonomous.py  test_branch.py  test_cli.py  test_compact_profile.py  test_compile_records.py  test_compression.py  test_compression_lifecycle.py  test_compression_storage.py  test_conditions.py  test_config_content.py  test_config_index.py  test_config_provenance.py  test_config_resolution.py  test_conversation.py  test_deploy.py  test_directives.py  test_dynamic_operations.py  test_edit_history.py  test_export_import.py  test_format_shorthand.py  test_gate.py  test_gate_integration.py  test_gc.py  test_health.py  test_hook_middleware_ordering.py  test_hook_stacking.py  test_hooks.py  test_hooks_display.py  test_hooks_gc.py  test_hooks_guidance.py  test_hooks_improve.py  test_hooks_merge.py  (+87 more)
tutorials/: 01.1-incremental-compile-cache-and-token-tracking.md  01.4-lru-compile-cache-and-snapshot-patching.md
(+627 files in other folders)
