[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tract-ai"
version = "0.1.0"
description = "Git-like version control for LLM context windows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "William Jin"}]
keywords = ["llm", "context", "version-control", "agents", "multi-agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy>=2.0.46,<2.2",
    "pydantic>=2.10,<3.0",
    "tiktoken>=0.12.0",
    "typing-extensions>=4.12",
]

[project.optional-dependencies]
openai = [
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<10",
]
anthropic = [
    "anthropic>=0.49,<1.0",
]
cli = [
    "click>=8.1,<9",
    "rich>=13.0,<15",
]
all = [
    "tract-ai[openai,anthropic,cli]",
]
dev = [
    "tract-ai[all]",
    "pytest>=8.0",
    "hypothesis>=6.150",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "mypy>=1.14",
]

[project.urls]
Homepage = "https://github.com/WilliamJin123/tract"
Documentation = "https://github.com/WilliamJin123/tract#readme"
Repository = "https://github.com/WilliamJin123/tract"

[project.scripts]
tract = "tract.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tract"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
